# Ranker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  node.h  notes.txt  xgboost.cpp
cmph/: Makefile  config.status  libtool
cmph-2.0/src/: main.c
cmph/cxxmph/: Makefile
cmph/examples/: Makefile
cmph/man/: Makefile
cmph/src/: Makefile
cmph/tests/: Makefile
data/: google.pkl  matches.txt  real.network  real.rcomm  real_tf.network  reverse.test  searches.txt  test.network  train.csv  train_urls.txt  train_urls_processed.txt  urls.txt
data/communities/: 0.comm  0.network  1.comm  1.network  10.comm  10.network  11.comm  11.network  12.comm  12.network  13.comm  13.network  14.comm  14.network  15.comm  15.network  16.comm  16.network  17.comm  17.network  18.comm  18.network  19.comm  19.network  2.comm  2.network  20.comm  20.network  21.comm  21.network  22.comm  22.network  23.comm  23.network  24.comm  24.network  25.comm  25.network  26.comm  26.network  (+80 more)
include/static/: algorithm.h  deque.h  google.h  hash.h  louvain.h  network.h  node.h  tree.h  vector.h  xgboost.h
src/: create_commities.ipynb  create_training.ipynb  google.cpp  hash.cpp  hash_train.cpp  insertrank.cpp  louvain.cpp  main.cpp  network.cpp  node.cpp  predict.cpp  predict_doc_t.cpp  search.py  tree.cpp  xgboost.cpp
